--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Curso Git 2020</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur quas, quasi voluptates et quae asperiores, laboriosam ea sequi 
+        sunt dicta esse sapiente fugit ratione rem nihil debitis harum ad distinctio?</p>
 </body>
 </html>
